--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
 <footer>
   <div class="container">
     <div class="row">
-      <!-- <div class="column">
-          <div class="col-sm-5">
+      <div class="column">
+          <!-- <div class="col-sm-5">
               <figure>
-                  <img src="/assets/img//ee_logo.png" class="img-fluid float-left ">
+                  <img src="/assets/img//eumetnet_logo.jpg" class="img-fluid float-left ">
               </figure>
           </div>
       </div>
       <div class="col-sm-3">
           <div class="col-sm-7">
               <figure>
-                  <img src="/assets/img//espa_logo.png" class="img-fluid float-left ">
+                  <img src="/assets/img//UP_LAPUP_Logo.png" class="img-fluid float-left ">
               </figure>
           </div>
       </div> -->
