Set logos float-center

--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="col-sm-3">
-             <img src="/assets/img//UP_LAPUP_Logo.png" class="img-fluid float-right" style="max-height:100px; width: auto;  height: auto; border-radius: 2px">
+             <img src="/assets/img//UP_LAPUP_Logo.png" class="img-fluid float-center" style="max-height:100px; width: auto;  height: auto; border-radius: 2px">
         </div>
       </div>
     </div>
